syntax = "proto3";
package datapimp.v1;
option go_package = "github.com/ashep/datapimp/gen/proto/datapimp/v1;datapimpv1";

message Item {
  string id = 1;
  string type = 2;
  uint64 version = 3;
  uint64 time = 4;
  string data = 5;
}

message PushItemRequest {
  string id = 1;
  string type = 2;
  string data = 3;
}

message PushItemResponse {
  Item item = 1;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}


service ItemService {
  rpc PushItem(PushItemRequest) returns (PushItemResponse) {}
  rpc GetItem(GetItemRequest) returns (GetItemResponse) {}
}
